# Docker-Vscode-STM32

./: .gitmodules  CMakeCache.txt  README.md  WSpace.code-workspace  cmake_install.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ros.yaml
Skid_Steer/: PID.ioc  cmake_install.cmake
Skid_Steer/App/: App.ioc  CMakeLists.txt  cmake_install.cmake
Skid_Steer/App/Core/Inc/: eth.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
Skid_Steer/App/Core/Src/: adc.c  dma.c  eth.c  freertos.cpp  gpio.c  main.c  main.cpp  sdio.c  stm32f4xx_it.c  tim.c  usart.c  usb_otg.c
Skid_Steer/App/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Skid_Steer/App/Microros/custom_overrides/include/: microros_allocators.h
Skid_Steer/App/Microros/custom_overrides/src/: microros_allocators.cpp
Skid_Steer/App/Microros/include/rmw_microxrcedds_c/: config.h
Skid_Steer/App/Microros/include/simpl_msgs/msg/: adc_config.h  pid_gains.h  robot_config.h  robot_msg.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_microxrcedds_c__visibility_control.h  wheel_config.h  wheel_msg.h
Skid_Steer/App/Microros/include/simpl_msgs/msg/detail/: adc_config__functions.c  adc_config__functions.h  adc_config__rosidl_typesupport_microxrcedds_c.h  adc_config__struct.h  adc_config__type_support.h  pid_gains__functions.c  pid_gains__functions.h  pid_gains__rosidl_typesupport_microxrcedds_c.h  pid_gains__struct.h  pid_gains__type_support.h  robot_config__functions.c  robot_config__functions.h  robot_config__rosidl_typesupport_microxrcedds_c.h  robot_config__struct.h  robot_config__type_support.h  robot_msg__functions.c  robot_msg__functions.h  robot_msg__rosidl_typesupport_microxrcedds_c.h  robot_msg__struct.h  robot_msg__type_support.h  wheel_config__functions.c  wheel_config__functions.h  wheel_config__rosidl_typesupport_microxrcedds_c.h  wheel_config__struct.h  wheel_config__type_support.h  wheel_msg__functions.c  wheel_msg__functions.h  wheel_msg__rosidl_typesupport_microxrcedds_c.h  wheel_msg__struct.h  wheel_msg__type_support.h
Skid_Steer/App/Microros/src/microros_transports/: dma_transport.c  dma_transport.h
Skid_Steer/App/User/Inc/: PID.h  Robot.h  adc_device.h  current_sensor.h  encoder.h  message_in.h  message_out.h  microros_wrapper.h  motor.h  utils.h  wheel.h
Skid_Steer/App/User/src/: PID.cpp  Robot.cpp  adc_device.cpp  current_sensor.cpp  encoder.cpp  microros_wrapper.cpp  motor.cpp  utils.cpp  wheel.cpp
Skid_Steer/General/Src/: swv.c
Skid_Steer/cmake/: Cleaning.cmake  ProjectConfiguration.cmake  stm32.cmake
cmake/: arm_CompilerSettings.cmake
openocd/: STM32F429.cfg  STM32F429.svd
src/hector_gazebo_plugins/: CMakeLists.txt  package.xml
src/skid_steer_description/: CMakeLists.txt  package.xml
src/skid_steer_description/config/: joint_names_WithOutGloablXYZ.yaml
src/skid_steer_description/launch/: display.launch  gazebo.launch  skid_steer_gazebo.launch.py
src/skid_steer_description/meshes/: left_rear_wheel.STL  right_front_wheel.STL  right_rear_wheel.STL
src/skid_steer_description/models/skid_steer/: model.sdf
src/skid_steer_description/models/skid_steer/meshes/: left_front_wheel.STL
src/skid_steer_description/urdf/: WithOutGloablXYZ.csv  WithOutGloablXYZ.urdf
src/skid_steer_description/worlds/: dolly_empty.world
src/spawn_robot/: package.xml  setup.py
src/spawn_robot/spawn_robot/: spawn_robot_node.py
src/test_params/: CMakeLists.txt  package.xml
src/test_params/src/: test_params.cpp
